# zcashskills

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ZCashSkills-Hackathon.pptx  binding.gyp  package-lock.json  package.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-wallet-persistence/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-VERIFICATION.md  1-RESEARCH.md
.planning/phases/02-viewing-keys/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-VERIFICATION.md  2-RESEARCH.md
.planning/phases/03-balance-and-sync/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  3-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/langchain/: zcash-tools.js
examples/openclaw/: zcash-agent.js
lib/: constants.js  grpc-client.js  index.js  lightwalletd.js  native-loader.js  params-loader.js  utils.js
native/: Cargo.toml
native/src/: addon.cpp  lib.rs
proto/: compact_formats.proto  service.proto
scripts/: install.js
skills/balance-check/: index.js
skills/check-balance/: index.js
skills/create-payment-uri/: index.js
skills/generate-address/: index.js
skills/parse-payment-uri/: index.js
skills/send-transaction/: index.js
skills/validate-address/: index.js
skills/viewing-keys/: index.js
skills/wallet-persist/: index.js
test/unit/: balance-check.test.js  generate-address.test.js  viewing-keys.test.js  wallet-persist.test.js
