[package]
name = "zcash-skills-native"
version = "0.1.0"
edition = "2021"
description = "Native ZCash cryptographic operations for zcashskills"
license = "MIT"
repository = "https://github.com/konradgnat/zcashskills"

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "0.10.1", default-features = false, features = ["napi-6"] }
zcash_keys = { version = "0.12.0", features = ["sapling"] }
zcash_address = "0.10.1"
zcash_protocol = "0.7"
zip32 = "0.2"
rand = "0.8"
bip39 = { version = "2.0.0", features = ["zeroize"] }
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
hex = "0.4"
zcash_primitives = { version = "0.26", features = ["circuits", "non-standard-fees"] }
zcash_proofs = { version = "0.26", features = ["local-prover"] }
sapling-crypto = "0.5"
zcash_note_encryption = "0.4"
# zcash_client_backend omitted — time crate compat issue; using zcash_primitives builder directly
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
neon-build = "0.10.1"

[profile.release]
opt-level = 3
strip = false
